moved carousel outside of  content to fix content spilling out of container

--- a/src/scss/user-profile.scss
+++ b/src/scss/user-profile.scss
@@ -38,9 +38,13 @@
 	}
 }
 
+.profile-page.ant-layout-content {
+	min-height: auto;
+}
+
 .profile-main {
 	background-color: #fff;
-	height          : 100%;
+	height          : inherit;
 
 	.outlined-btn {
 		@include outlined-button($alpaca-green);
